
modelSources = Model/atom.cpp Model/io.cpp Model/lennardjones.cpp Model/modelMain.cpp Model/send_atoms.cpp Model/statisticssampler.cpp Model/system.cpp Model/unitconverter.cpp Model/vec2.cpp Model/velocityverlet.cpp 
viewSources = View/circles.cpp View/loadShaders.cpp View/viewMain.cpp 

# this lists the binaries to produce, the (non-PHONY, binary) targets in
# the previous manual Makefile
bin_PROGRAMS = $(top_builddir)/bin/parallel2DLJMD
__top_builddir__bin_parallel2DLJMD_SOURCES = main.cpp $(modelSources) $(viewSources)
